@@ -1,3 +1,7 @@
+26 May 2008
+
+* New option: parallel-accounts. Sets number of accounts to fetch in parallel.
+
 22 May 2008
 
 * deliver-imap fetch method; suggested by Jason Dixon a while ago.
@@ -823,4 +827,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.192 2008-05-22 21:18:03 nicm Exp $
+$Id: CHANGES,v 1.193 2008-05-26 20:26:40 nicm Exp $
